	buildscript {
	ext {
		springDocVersion = '1.6.11'
	}
}

plugins {
	id 'java'
	//id 'checkstyle'
	id 'org.springframework.boot' version '2.6.12'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
}

group = 'ccfit.nsu.ru'
sourceCompatibility = '17'
archivesBaseName = 'spi'


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

repositories {
	mavenCentral()
}

dependencies {

	//Spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.4'

	// Common
	implementation 'junit:junit:4.12'

	//DB
	implementation 'org.liquibase:liquibase-core'
	runtimeOnly 'org.postgresql:postgresql'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'

	//Utils
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.apache.commons:commons-text:1.9'

	//Tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	//Mapstruct
	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

	// Swagger
	implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
	implementation "org.springdoc:springdoc-openapi-data-rest:${springDocVersion}"

	//Yaml
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.12.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.6.1'

	// For JWT Auth
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

}

tasks.named('test') {
	useJUnitPlatform()
}

//checkstyle {
//	configFile = file("${project.rootDir}/configs/checkstyle.xml")
//	toolVersion = '10.3.4'
//	maxWarnings = 0
//	checkstyleMain.source = "src/main/java"
//	checkstyleTest.enabled = false
//	configProperties = [checkstyleConfigDir: "${projectDir}/configs"]
//}
